--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.unity.barracuda": "file:/Users/rinomaki/barracuda-release-release-3.0.0 19.23.51",
+    "com.unity.barracuda": "https://github.com/rino-san/barracuda.git",
     "com.unity.collab-proxy": "1.15.15",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.13",
